# indigo-cli

./: .gitignore  README.md  data.json  pyproject.toml
indigo/: cli.py
indigo/core/: git_manager.py  storage.py
